--- a/Semana 7/ficha.html
+++ b/Semana 7/ficha.html
@@ -148,23 +148,23 @@
         </div>
         <div class="attacks">
             <p class="subtitle">ataques:</p>
-            <p>A - 0 de dano</p>
-            <p>2 - 5 de dano</p>
-            <p>3 - 6 de dano</p>
-            <p>4 - 15 de dano</p>
-            <p>5 - 6 de dano</p>
-            <p>6 - 15 de dano</p>
-            <p>7 - 6 de dano</p>
-            <p>8 - 5 de dano</p>
-            <p>9 - 0 de dano</p>
-            <p>10 - 5 de dano</p>
-            <p>J - 0 de dano</p>
-            <p>Q - 3 de cura 1°, 10 de cura 2° </p>
-            <p>K - 0 de dano</p>
+            <p>A - 6 de dano.</p>
+            <p>2 - 5 de dano.</p>
+            <p>3 - 6 de dano.</p>
+            <p>4 - 15 de dano.</p>
+            <p>5 - 6 de dano.</p>
+            <p>6 - 15 de dano.</p>
+            <p>7 - 6 de dano.</p>
+            <p>8 - 5 de dano.</p>
+            <p>9 - 4 de dano.</p>
+            <p>10 - 5 de dano.</p>
+            <p>J - 0 de dano.</p>
+            <p>Q - 0 de dano.</p>
+            <p>K - 0 de dano.</p>
         </div>
         <div class="section">
             <div class="weapon">
-                <p>Lâmina do Crepúsculo</p>
+                <p>Mangual da Justiça</p>
                 <div class="image-placeholder">
                     <img src="arma_arthur.png" alt="Imagem da arma">
                 </div>
@@ -173,4 +173,5 @@
     </div>
 </body>
 </html>
+
 
